--- a/gk.bib
+++ b/gk.bib
@@ -29216,3 +29216,171 @@ Theory Group (Formerly: E1071), TU Wien},
   pages={1139--1144},
   year={2008}
 }
+@article{Bullock75,
+author={Charles S. Bullock III},
+title={Redistricting and Congressional Stability},
+journal={Journal of Politics},
+volume ={37},
+pages={567-575},
+year={1975}
+}
+
+@article{CanBraCog02, 
+title={Out of Step, Out of Office: Electoral Accountability and House Members' Voting}, 
+volume={96}, DOI={10.1017/S0003055402004276}, 
+number={1}, 
+journal={American Political Science Review}, 
+publisher={Cambridge University Press}, 
+author={CANES-WRONE, BRANDICE and BRADY, DAVID W. and COGAN, JOHN F.}, 
+year={2002}, 
+pages={127–140}}
+
+@article{Erikson71,
+author = {Robert S. Erikson},
+journal = {Polity},
+number={3},
+pages={395-405},
+title={The Advantage of Incumbency in Congressional Elections},
+year={1971}
+}
+
+
+@article{Erikson72,
+author = {Robert S. Erikson},
+journal = {American Political Science Review},
+number={66},
+pages={1234-1245},
+title={Malaportionment, Gerrymandering, and Party Fortunes in Congressional Elections},
+year={1972}
+}
+
+@article{Ferejohn77,
+author={John A. Ferejohn},
+title={On the Decline of Competition in Congressional Elections},
+year={1977},
+pages={166-176},
+volume={71},
+journal={American Political Science Review}
+}
+
+@article{Fiorina77
+ ISSN = {00030554, 15375943},
+ URL = {http://www.jstor.org/stable/1956961},
+ author = {Morris P. Fiorina},
+ journal = {The American Political Science Review},
+ number = {1},
+ pages = {177--181},
+ publisher = {[American Political Science Association, Cambridge University Press]},
+ title = {The Case of the Vanishing Marginals: The Bureaucracy Did It},
+ urldate = {2023-10-29},
+ volume = {71},
+ year = {1977}
+}
+
+@article{Grofman93,
+author = {Bernard Grofman},
+year={1993},
+journal={Cardozo Law Review},
+title={Would Vince Lombardi Have Been Right if He Had Said: `When it Comes to Redistricting, Race isn't Everything, It's the Only Thing'?},
+pages={1237},
+volume={14}
+}
+
+@article{Jacobson87,
+ ISSN = {00925853, 15405907},
+ URL = {http://www.jstor.org/stable/2111327},
+ abstract = {The average vote margin enjoyed by incumbent candidates for the U.S. House of Representatives increased sharply during the 1960s. Despite this, and contrary to assumptions common in the literature on recent congressional elections, electoral data show that House incumbents are no safer now than they were in the 1950s, the marginals, properly defined, have not vanished; the swing ratio has diminished little, if at all; and competition for House seats held by incumbents has not declined. Vote margins increased without adding to incumbent security, diminishing competition, or dampening swings because the heterogeneity of interelection vote swings increased at the same time.},
+ author = {Gary C. Jacobson},
+ journal = {American Journal of Political Science},
+ number = {1},
+ pages = {126--141},
+ publisher = {[Midwest Political Science Association, Wiley]},
+ title = {The Marginals Never Vanished: Incumbency and Competition in Elections to the U.S. House of Representatives, 1952-82},
+ urldate = {2023-10-29},
+ volume = {31},
+ year = {1987}
+}
+
+@article{Jacobson15,
+ ISSN = {00223816, 14682508},
+ URL = {http://www.jstor.org/stable/10.1086/681670},
+ abstract = {With little fanfare, the electoral advantage enjoyed by US representatives has fallen over the past several elections to levels not seen since the 1950s. The incumbency advantage has diminished in conjunction with an increase in party loyalty, straight-ticket voting, and president-centered electoral nationalization, products of the widening and increasingly coherent partisan divisions in the American electorate. Consequently, House incumbents now have a much harder time retaining districts that lean toward the rival party. Democrats had been the main beneficiaries of the denationalization of electoral politics that had enabled the incumbency advantage to grow, and they have thus been the main victims of the reemergence of a more party-centered electoral process. Republicans enjoy a long-standing structural advantage in the distribution of partisans across districts, so this trend has strengthened their grip on the House even as they have become less competitive in contests for the presidency.},
+ author = {Gary C. Jacobson},
+ journal = {The Journal of Politics},
+ number = {3},
+ pages = {861--873},
+ publisher = {[The University of Chicago Press, Southern Political Science Association]},
+ title = {It’s Nothing Personal: The Decline of the Incumbency Advantage in US House Elections},
+ urldate = {2023-10-29},
+ volume = {77},
+ year = {2015}
+}
+
+
+
+@article{Jones10,
+	abstract = {Early research led scholars to believe that institutional accountability in Congress is lacking because public evaluations of its collective performance do not affect the reelection of its members. However, a changed partisan environment along with new empirical evidence raises unanswered questions about the effect of congressional performance on incumbents' electoral outcomes over time. Analysis of House reelection races across the last several decades produces important findings: (1) low congressional approval ratings generally reduce the electoral margins of majority party incumbents and increase margins for minority party incumbents; (2) partisan polarization in the House increases the magnitude of this partisan differential, mainly through increased electoral accountability among majority party incumbents; (3) these electoral effects of congressional performance ratings hold largely irrespective of a member's individual party loyalty or seat safety. These findings carry significant implications for partisan theories of legislative organization and help explain salient features of recent Congresses.},
+	author = {Jones, David R.},
+	doi = {https://doi.org/10.1111/j.1540-5907.2010.00433.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-5907.2010.00433.x},
+	journal = {American Journal of Political Science},
+	number = {2},
+	pages = {323-337},
+	title = {Partisan Polarization and Congressional Accountability in House Elections},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-5907.2010.00433.x},
+	volume = {54},
+	year = {2010},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-5907.2010.00433.x},
+	bdsk-url-2 = {https://doi.org/10.1111/j.1540-5907.2010.00433.x}}
+
+
+@article{KenMccSimKurIma23,
+	abstract = {Congressional district lines in many US states are drawn by partisan actors, raising concerns about gerrymandering. To separate the partisan effects of redistricting from the effects of other factors including geography and redistricting rules, we compare possible party compositions of the US House under the enacted plan to those under a set of alternative simulated plans that serve as a nonpartisan baseline. We find that partisan gerrymandering is widespread in the 2020 redistricting cycle, but most of the electoral bias it creates cancels at the national level, giving Republicans two additional seats on average. Geography and redistricting rules separately contribute a moderate pro-Republican bias. Finally, we find that partisan gerrymandering reduces electoral competition and makes the partisan composition of the US House less responsive to shifts in the national vote.},
+	author = {Christopher T. Kenny and Cory McCartan and Tyler Simko and Shiro Kuriwaki and Kosuke Imai},
+	doi = {10.1073/pnas.2217322120},
+	eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2217322120},
+	journal = {Proceedings of the National Academy of Sciences},
+	number = {25},
+	pages = {e2217322120},
+	title = {Widespread partisan gerrymandering mostly cancels nationally, but reduces electoral competition},
+	url = {https://www.pnas.org/doi/abs/10.1073/pnas.2217322120},
+	volume = {120},
+	year = {2023},
+	bdsk-url-1 = {https://www.pnas.org/doi/abs/10.1073/pnas.2217322120},
+	bdsk-url-2 = {https://doi.org/10.1073/pnas.2217322120}}
+
+
+
+@inbook{Mayhew08,
+	address = {New Haven},
+	author = {David R. Mayhew},
+	booktitle = {How the American Government Works},
+	doi = {doi:10.12987/9780300151763-003},
+	isbn = {9780300151763},
+	lastchecked = {2023-10-30},
+	pages = {54--72},
+	publisher = {Yale University Press},
+	title = {Congressional Elections: The Case of the Vanishing Marginals},
+	url = {https://doi.org/10.12987/9780300151763-003},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.12987/9780300151763-003}}
+
+
+@book{PrzAlv00,
+title = {Democracy and Development},
+author = {Przeworski, Adam and Alvarez, Michael E. and Cheibub, Jose Antonio and Limongi, Fernando},
+year = {2000},
+publisher = {Cambridge University Press},
+abstract = {Is economic development conducive to political democracy? Does democracy foster or hinder material welfare? These two questions are examined by looking at the experience of 135 countries between 1950 and 1990. Descriptive information, statistical analyses, and historical narratives are interwoven to gain an understanding of the dynamic of political regimes and their impact on economic development and other aspects of material welfare. The findings, several most surprising, dispel any notion of a trade-off between democracy and development. Economic development does not generate democracies but democracies are much more likely to survive in wealthy societies. Political regimes have no impact on the growth of total national incomes, while political instability affects growth only in dictatorships. Per capita incomes grow faster in democracies since population increases faster under dictatorships. In general, political regimes have more of an effect on demography than on economics.},
+url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
+}
+
+@article{Tufte73,
+author={Edward R. Tufte},
+year={1973},
+title = {The Relationship Between Seats and Votes in Two Party Systems},
+journal = {American Political Science Review},
+volume ={67},
+pages = {540-554}
+
+}
