--- a/gk.bib
+++ b/gk.bib
@@ -19499,7 +19499,6 @@ address = {Chicago, IL}
   volume =	 {98},
   number =	 {464},
   pages =	 {807--817},
-  issn =	 {0162-1459},
   year =	 {2003}
 }
 
@@ -29253,8 +29252,7 @@ volume={71},
 journal={American Political Science Review}
 }
 
-@article{Fiorina77
- ISSN = {00030554, 15375943},
+@article{Fiorina77,
  URL = {http://www.jstor.org/stable/1956961},
  author = {Morris P. Fiorina},
  journal = {The American Political Science Review},
