--- a/gk.bib
+++ b/gk.bib
@@ -29363,3 +29363,74 @@ abstract = {Is economic development conducive to political democracy? Does democ
 url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 }
 
+@article{AnsJon10,
+	author = {Ansolabehere, Stephen and Jones, Philip Edward},
+	doi = {https://doi.org/10.1111/j.1540-5907.2010.00448.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-5907.2010.00448.x},
+	journal = {American Journal of Political Science},
+	number = {3},
+	pages = {583-597},
+	title = {Constituents' Responses to Congressional Roll-Call Voting},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-5907.2010.00448.x},
+	volume = {54},
+	year = {2010},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-5907.2010.00448.x},
+	bdsk-url-2 = {https://doi.org/10.1111/j.1540-5907.2010.00448.x}}
+
+@article{NyhMcgSid12,
+	author = {Brendan Nyhan and Eric McGhee and John Sides and Seth Masket and Steven Greene},
+	doi = {10.1177/1532673X11433768},
+	eprint = {https://doi.org/10.1177/1532673X11433768},
+	journal = {American Politics Research},
+	number = {5},
+	pages = {844-879},
+	title = {One Vote Out of Step? The Effects of Salient Roll Call Votes in the 2010 Election},
+	url = {https://doi.org/10.1177/1532673X11433768},
+	volume = {40},
+	year = {2012},
+	bdsk-url-1 = {https://doi.org/10.1177/1532673X11433768}}
+
+@article{TauWar18,
+  author =       {Tausanovitch, Chris and Warshaw, Christopher},
+  date =         {2018/03/01},
+  date-added =   {2023-10-30 13:08:13 -0400},
+  date-modified ={2023-10-30 13:08:13 -0400},
+  doi =          {10.1007/s11109-017-9437-1},
+  id =           {Tausanovitch2018},
+  isbn =         {1573-6687},
+  journal =      {Political Behavior},
+  number =       {1},
+  pages =        {223--245},
+  title =        {Does the Ideological Proximity Between Candidates
+                  and Voters Affect Voting in U.S. House Elections?},
+  url =          {https://doi.org/10.1007/s11109-017-9437-1},
+  volume =       {40},
+  year =         {2018},
+  bdsk-url-1 =   {https://doi.org/10.1007/s11109-017-9437-1}
+}
+
+@article{FouHal22,
+  title =        {How Do Electoral Incentives Affect Legislator
+                  Behavior? Evidence from U.S. State Legislatures},
+  volume =       {116},
+  DOI =          {10.1017/S0003055421001064},
+  number =       {2},
+  journal =      {American Political Science Review},
+  publisher =    {Cambridge University Press},
+  author =       {Fouirnaies, Alexander and Hall, Andrew B.},
+  year =         {2022},
+  pages =        {662–676}
+}
+
+@article{IarLopMei22,
+	author = {Iaryczower, Matias and Lopez-Moctezuma, Gabriel and Meirowitz, Adam},
+	doi = {https://doi.org/10.1111/ajps.12740},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ajps.12740},
+	journal = {American Journal of Political Science},
+	year={2022},
+	number = {n/a},
+	title = {Career Concerns and the Dynamics of Electoral Accountability},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12740},
+	volume = {n/a},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12740},
+	bdsk-url-2 = {https://doi.org/10.1111/ajps.12740}}
