--- a/gk.bib
+++ b/gk.bib
@@ -29392,12 +29392,6 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 
 @article{TauWar18,
   author =       {Tausanovitch, Chris and Warshaw, Christopher},
-  date =         {2018/03/01},
-  date-added =   {2023-10-30 13:08:13 -0400},
-  date-modified ={2023-10-30 13:08:13 -0400},
-  doi =          {10.1007/s11109-017-9437-1},
-  id =           {Tausanovitch2018},
-  isbn =         {1573-6687},
   journal =      {Political Behavior},
   number =       {1},
   pages =        {223--245},
@@ -29405,8 +29399,7 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
                   and Voters Affect Voting in U.S. House Elections?},
   url =          {https://doi.org/10.1007/s11109-017-9437-1},
   volume =       {40},
-  year =         {2018},
-  bdsk-url-1 =   {https://doi.org/10.1007/s11109-017-9437-1}
+  year =         {2018}
 }
 
 @article{FouHal22,
