--- a/gk.bib
+++ b/gk.bib
@@ -29391,15 +29391,14 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 	bdsk-url-1 = {https://doi.org/10.1177/1532673X11433768}}
 
 @article{TauWar18,
+  title =        {Does the ideological proximity between candidates
+                  and voters affect voting in US house elections?},
   author =       {Tausanovitch, Chris and Warshaw, Christopher},
   journal =      {Political Behavior},
-  number =       {1},
-  pages =        {223--245},
-  title =        {Does the Ideological Proximity Between Candidates
-                  and Voters Affect Voting in U.S. House Elections?},
-  url =          {https://doi.org/10.1007/s11109-017-9437-1},
   volume =       {40},
-  year =         {2018}
+  pages =        {223--245},
+  year =         {2018},
+  publisher =    {Springer}
 }
 
 @article{FouHal22,
