--- a/gk.bib
+++ b/gk.bib
@@ -29322,7 +29322,7 @@ volume={14}
 	bdsk-url-2 = {https://doi.org/10.1111/j.1540-5907.2010.00433.x}}
 
 
-@article{KenMccSimKurIma23,
+@article{KenMccSim23,
 	abstract = {Congressional district lines in many US states are drawn by partisan actors, raising concerns about gerrymandering. To separate the partisan effects of redistricting from the effects of other factors including geography and redistricting rules, we compare possible party compositions of the US House under the enacted plan to those under a set of alternative simulated plans that serve as a nonpartisan baseline. We find that partisan gerrymandering is widespread in the 2020 redistricting cycle, but most of the electoral bias it creates cancels at the national level, giving Republicans two additional seats on average. Geography and redistricting rules separately contribute a moderate pro-Republican bias. Finally, we find that partisan gerrymandering reduces electoral competition and makes the partisan composition of the US House less responsive to shifts in the national vote.},
 	author = {Christopher T. Kenny and Cory McCartan and Tyler Simko and Shiro Kuriwaki and Kosuke Imai},
 	doi = {10.1073/pnas.2217322120},
@@ -29426,3 +29426,33 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 	volume = {n/a},
 	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12740},
 	bdsk-url-2 = {https://doi.org/10.1111/ajps.12740}}
+	
+@article{HirSny12,
+	author = {Shigeo Hirano and James M. Snyder Jr.},
+	doi = {10.1561/100.00012039},
+	issn = {1554-0626},
+	journal = {Quarterly Journal of Political Science},
+	number = {4},
+	pages = {447-456},
+	title = {What Happens to Incumbents in Scandals?},
+	url = {http://dx.doi.org/10.1561/100.00012039},
+	volume = {7},
+	year = {2012},
+	bdsk-url-1 = {http://dx.doi.org/10.1561/100.00012039}}
+	
+	
+@article{Groseclose01,
+ ISSN = {00925853, 15405907},
+ URL = {http://www.jstor.org/stable/2669329},
+ abstract = {This article extends the Calvert-Wittman candidate-location model by allowing one candidate to have a valence advantage over the other, due to, say, superior character, charisma, name recognition, or intelligence. Under some fairly weak assumptions, I show that when one candidate has a small advantage over the other, this alters equilibrium policy positions in two ways. First, it causes the disadvantaged candidate to move away from the center. Second, and perhaps more surprising, it causes the advantaged candidate to move toward the center. I also show that, under some fairly weak assumptions, for all levels of the valence advantage, the advantaged candidate chooses a more moderate position than the disadvantaged candidate. Empirical studies of congressional elections by Fiorina (1973), and Ansolabehere, Snyder, and Stewart (2001) support this result.},
+ author = {Tim Groseclose},
+ journal = {American Journal of Political Science},
+ number = {4},
+ pages = {862--886},
+ publisher = {[Midwest Political Science Association, Wiley]},
+ title = {A Model of Candidate Location When One Candidate Has a Valence Advantage},
+ urldate = {2023-10-30},
+ volume = {45},
+ year = {2001}
+}
+
