--- a/gk.bib
+++ b/gk.bib
@@ -29230,7 +29230,7 @@ volume={96}, DOI={10.1017/S0003055402004276},
 number={1}, 
 journal={American Political Science Review}, 
 publisher={Cambridge University Press}, 
-author={CANES-WRONE, BRANDICE and BRADY, DAVID W. and COGAN, JOHN F.}, 
+author={Canes-Wrone, Brandice and Brady, David W. and Cogan, John F.}, 
 year={2002}, 
 pages={127–140}}
 
