--- a/gk.bib
+++ b/gk.bib
@@ -29456,3 +29456,32 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
  year = {2001}
 }
 
+@article{AnsKur22,
+	abstract = {Abstract The premise that constituents hold representatives accountable for their legislative decisions undergirds political theories of democracy and legal theories of statutory interpretation. But studies of this at the individual level are rare, examine only a handful of issues, and arrive at mixed results. We provide an extensive assessment of issue accountability at the individual level. We trace the congressional roll-call votes on 44 bills across seven Congresses (2006--18), and link them to constituent's perceptions of their representative's votes and their evaluation of their representative. Correlational, instrumental variables, and experimental approaches all show that constituents hold representatives accountable. A one-standard deviation increase in a constituent's perceived issue agreement with their representative can improve net approval by 35 percentage points. Congressional districts, however, are heterogeneous. Consequently, the effect of issue agreement on vote is much smaller at the district level, resolving an apparent discrepancy between micro and macro studies.},
+	author = {Ansolabehere, Stephen and Kuriwaki, Shiro},
+	doi = {https://doi.org/10.1111/ajps.12607},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ajps.12607},
+	journal = {American Journal of Political Science},
+	number = {1},
+	pages = {123-139},
+	title = {Congressional Representation: Accountability from the Constituent's Perspective},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12607},
+	volume = {66},
+	year = {2022},
+	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12607},
+	bdsk-url-2 = {https://doi.org/10.1111/ajps.12607}}
+
+
+@article{Eskridge87,
+ ISSN = {00419907},
+ URL = {http://www.jstor.org/stable/3312014},
+ author = {William N. Eskridge},
+ journal = {University of Pennsylvania Law Review},
+ number = {6},
+ pages = {1479--1555},
+ publisher = {The University of Pennsylvania Law Review},
+ title = {Dynamic Statutory Interpretation},
+ urldate = {2023-10-30},
+ volume = {135},
+ year = {1987}
+}
