--- a/gk.bib
+++ b/gk.bib
@@ -29304,8 +29304,6 @@ volume={14}
  year = {2015}
 }
 
-
-
 @article{Jones10,
 	abstract = {Early research led scholars to believe that institutional accountability in Congress is lacking because public evaluations of its collective performance do not affect the reelection of its members. However, a changed partisan environment along with new empirical evidence raises unanswered questions about the effect of congressional performance on incumbents' electoral outcomes over time. Analysis of House reelection races across the last several decades produces important findings: (1) low congressional approval ratings generally reduce the electoral margins of majority party incumbents and increase margins for minority party incumbents; (2) partisan polarization in the House increases the magnitude of this partisan differential, mainly through increased electoral accountability among majority party incumbents; (3) these electoral effects of congressional performance ratings hold largely irrespective of a member's individual party loyalty or seat safety. These findings carry significant implications for partisan theories of legislative organization and help explain salient features of recent Congresses.},
 	author = {Jones, David R.},
@@ -29323,19 +29321,18 @@ volume={14}
 
 
 @article{KenMccSim23,
-	abstract = {Congressional district lines in many US states are drawn by partisan actors, raising concerns about gerrymandering. To separate the partisan effects of redistricting from the effects of other factors including geography and redistricting rules, we compare possible party compositions of the US House under the enacted plan to those under a set of alternative simulated plans that serve as a nonpartisan baseline. We find that partisan gerrymandering is widespread in the 2020 redistricting cycle, but most of the electoral bias it creates cancels at the national level, giving Republicans two additional seats on average. Geography and redistricting rules separately contribute a moderate pro-Republican bias. Finally, we find that partisan gerrymandering reduces electoral competition and makes the partisan composition of the US House less responsive to shifts in the national vote.},
-	author = {Christopher T. Kenny and Cory McCartan and Tyler Simko and Shiro Kuriwaki and Kosuke Imai},
-	doi = {10.1073/pnas.2217322120},
-	eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.2217322120},
-	journal = {Proceedings of the National Academy of Sciences},
-	number = {25},
-	pages = {e2217322120},
-	title = {Widespread partisan gerrymandering mostly cancels nationally, but reduces electoral competition},
-	url = {https://www.pnas.org/doi/abs/10.1073/pnas.2217322120},
-	volume = {120},
-	year = {2023},
-	bdsk-url-1 = {https://www.pnas.org/doi/abs/10.1073/pnas.2217322120},
-	bdsk-url-2 = {https://doi.org/10.1073/pnas.2217322120}}
+  abstract = {Congressional district lines in many US states are drawn by partisan actors, raising concerns about gerrymandering. To separate the partisan effects of redistricting from the effects of other factors including geography and redistricting rules, we compare possible party compositions of the US House under the enacted plan to those under a set of alternative simulated plans that serve as a nonpartisan baseline. We find that partisan gerrymandering is widespread in the 2020 redistricting cycle, but most of the electoral bias it creates cancels at the national level, giving Republicans two additional seats on average. Geography and redistricting rules separately contribute a moderate pro-Republican bias. Finally, we find that partisan gerrymandering reduces electoral competition and makes the partisan composition of the US House less responsive to shifts in the national vote.},
+  author   = {Christopher T. Kenny and Cory McCartan and Tyler Simko and Shiro Kuriwaki and Kosuke Imai},
+  doi      = {10.1073/pnas.2217322120},
+  eprint   = {https://www.pnas.org/doi/pdf/10.1073/pnas.2217322120},
+  journal  = {Proceedings of the National Academy of Sciences},
+  number   = {25},
+  pages    = {e2217322120},
+  title    = {Widespread partisan gerrymandering mostly cancels nationally, but reduces electoral competition},
+  url      = {https://www.pnas.org/doi/abs/10.1073/pnas.2217322120},
+  volume   = {120},
+  year     = {2023}
+}
 
 
 
@@ -29343,15 +29340,13 @@ volume={14}
 	address = {New Haven},
 	author = {David R. Mayhew},
 	booktitle = {How the American Government Works},
-	doi = {doi:10.12987/9780300151763-003},
-	isbn = {9780300151763},
 	lastchecked = {2023-10-30},
 	pages = {54--72},
 	publisher = {Yale University Press},
 	title = {Congressional Elections: The Case of the Vanishing Marginals},
 	url = {https://doi.org/10.12987/9780300151763-003},
-	year = {2008},
-	bdsk-url-1 = {https://doi.org/10.12987/9780300151763-003}}
+	year = {2008}
+	}
 
 
 @book{PrzAlv00,
@@ -29364,31 +29359,26 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 }
 
 @article{AnsJon10,
-	author = {Ansolabehere, Stephen and Jones, Philip Edward},
-	doi = {https://doi.org/10.1111/j.1540-5907.2010.00448.x},
-	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1540-5907.2010.00448.x},
-	journal = {American Journal of Political Science},
-	number = {3},
-	pages = {583-597},
-	title = {Constituents' Responses to Congressional Roll-Call Voting},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-5907.2010.00448.x},
-	volume = {54},
-	year = {2010},
-	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1540-5907.2010.00448.x},
-	bdsk-url-2 = {https://doi.org/10.1111/j.1540-5907.2010.00448.x}}
+  author  = {Ansolabehere, Stephen and Jones, Philip Edward},
+  doi     = {https://doi.org/10.1111/j.1540-5907.2010.00448.x},
+  journal = {American Journal of Political Science},
+  number  = {3},
+  pages   = {583-597},
+  title   = {Constituents' Responses to Congressional Roll-Call Voting},
+  volume  = {54},
+  year    = {2010}
+}
 
 @article{NyhMcgSid12,
 	author = {Brendan Nyhan and Eric McGhee and John Sides and Seth Masket and Steven Greene},
 	doi = {10.1177/1532673X11433768},
-	eprint = {https://doi.org/10.1177/1532673X11433768},
 	journal = {American Politics Research},
 	number = {5},
 	pages = {844-879},
 	title = {One Vote Out of Step? The Effects of Salient Roll Call Votes in the 2010 Election},
-	url = {https://doi.org/10.1177/1532673X11433768},
 	volume = {40},
 	year = {2012},
-	bdsk-url-1 = {https://doi.org/10.1177/1532673X11433768}}
+	}
 
 @article{TauWar18,
   title =        {Does the ideological proximity between candidates
@@ -29417,15 +29407,12 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 @article{IarLopMei22,
 	author = {Iaryczower, Matias and Lopez-Moctezuma, Gabriel and Meirowitz, Adam},
 	doi = {https://doi.org/10.1111/ajps.12740},
-	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ajps.12740},
 	journal = {American Journal of Political Science},
 	year={2022},
 	number = {n/a},
 	title = {Career Concerns and the Dynamics of Electoral Accountability},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12740},
-	volume = {n/a},
-	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12740},
-	bdsk-url-2 = {https://doi.org/10.1111/ajps.12740}}
+	volume = {n/a}
+}
 	
 @article{HirSny12,
 	author = {Shigeo Hirano and James M. Snyder Jr.},
@@ -29435,10 +29422,9 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 	number = {4},
 	pages = {447-456},
 	title = {What Happens to Incumbents in Scandals?},
-	url = {http://dx.doi.org/10.1561/100.00012039},
 	volume = {7},
-	year = {2012},
-	bdsk-url-1 = {http://dx.doi.org/10.1561/100.00012039}}
+	year = {2012}
+}
 	
 	
 @article{Groseclose01,
@@ -29460,16 +29446,13 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
 	abstract = {Abstract The premise that constituents hold representatives accountable for their legislative decisions undergirds political theories of democracy and legal theories of statutory interpretation. But studies of this at the individual level are rare, examine only a handful of issues, and arrive at mixed results. We provide an extensive assessment of issue accountability at the individual level. We trace the congressional roll-call votes on 44 bills across seven Congresses (2006--18), and link them to constituent's perceptions of their representative's votes and their evaluation of their representative. Correlational, instrumental variables, and experimental approaches all show that constituents hold representatives accountable. A one-standard deviation increase in a constituent's perceived issue agreement with their representative can improve net approval by 35 percentage points. Congressional districts, however, are heterogeneous. Consequently, the effect of issue agreement on vote is much smaller at the district level, resolving an apparent discrepancy between micro and macro studies.},
 	author = {Ansolabehere, Stephen and Kuriwaki, Shiro},
 	doi = {https://doi.org/10.1111/ajps.12607},
-	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/ajps.12607},
 	journal = {American Journal of Political Science},
 	number = {1},
 	pages = {123-139},
 	title = {Congressional Representation: Accountability from the Constituent's Perspective},
-	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12607},
 	volume = {66},
-	year = {2022},
-	bdsk-url-1 = {https://onlinelibrary.wiley.com/doi/abs/10.1111/ajps.12607},
-	bdsk-url-2 = {https://doi.org/10.1111/ajps.12607}}
+	year = {2022}
+	}
 
 
 @article{Eskridge87,
