--- a/gk.bib
+++ b/gk.bib
@@ -28796,3 +28796,13 @@ Theory Group (Formerly: E1071), TU Wien},
   year =         {2020},
   publisher =    {Liveright Publishing}
 }
+@article{Nielsen2017,
+  title =        {Economic growth and the growth of human population
+                  in the past 2,000,000 years},
+  author =       {Nielsen, Ron W},
+  journal =      {Journal of Economics Bibliography},
+  volume =       {4},
+  number =       {2},
+  pages =        {128--149},
+  year =         {2017}
+}
