--- a/gk.bib
+++ b/gk.bib
@@ -29463,3 +29463,23 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
  volume = {135},
  year = {1987}
 }
+@article{FraHer2018,
+  title={Are Americans stuck in uncompetitive enclaves? An appraisal of US electoral competition},
+  author={Fraga, Bernard L and Hersh, Eitan D},
+  journal={Quarterly Journal of Political Science},
+  volume={13},
+  number={3},
+  pages={291--311},
+  year={2018},
+  publisher={Now Publishers, Inc.}
+}
+
+@article{LitMen2023,
+  author          = {Andrew T. Little and Anne Meng},
+  journal         = {PS: Political Science and Politics},
+  number          = {},
+  title           = {Measuring Democratic Backsliding},
+  volume          = {},
+  doi             = {http://dx.doi.org/10.2139/ssrn.4327307},
+  year            = {2024}
+}
