--- a/gk.bib
+++ b/gk.bib
@@ -29483,3 +29483,19 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   doi             = {http://dx.doi.org/10.2139/ssrn.4327307},
   year            = {2024}
 }
+@book{Metzger2021,
+  title={Using Shiny to Teach Econometric Models},
+  author={Metzger, Shawna K},
+  year={2021},
+  publisher={Cambridge University Press}
+}
+@article{Metzger2022,
+  title={Teaching Econometrics Dynamically with R-Shiny},
+  author={Metzger, Shawna K},
+  journal={PS: Political Science \& Politics},
+  volume={55},
+  number={1},
+  pages={225--229},
+  year={2022},
+  publisher={Cambridge University Press}
+}
