--- a/gk.bib
+++ b/gk.bib
@@ -29499,3 +29499,23 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2022},
   publisher={Cambridge University Press}
 }
+@article{Schleutker2022,
+  title={Seven suggestions for teaching quantitative methods},
+  author={Schleutker, Elina},
+  journal={PS: Political Science \& Politics},
+  volume={55},
+  number={2},
+  pages={419--423},
+  year={2022},
+  publisher={Cambridge University Press}
+}
+@article{bailey2019teaching,
+  title={Teaching statistics: going from scary, boring, and useless to, well, something better},
+  author={Bailey, Michael A},
+  journal={PS: Political Science \& Politics},
+  volume={52},
+  number={2},
+  pages={367--370},
+  year={2019},
+  publisher={Cambridge University Press}
+}
