--- a/gk.bib
+++ b/gk.bib
@@ -29519,3 +29519,13 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2019},
   publisher={Cambridge University Press}
 }
+@article{williams2022teaching,
+  title={Teaching Programming Skills in Methods Courses Is an Opportunity, Not a Burden},
+  author={Williams, Rob},
+  journal={PS: Political Science \& Politics},
+  volume={55},
+  number={1},
+  pages={221--224},
+  year={2022},
+  publisher={Cambridge University Press}
+}
