--- a/gk.bib
+++ b/gk.bib
@@ -29529,3 +29529,9 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2022},
   publisher={Cambridge University Press}
 }
+@book{lee2009beyond,
+  title={Beyond ideology: Politics, principles, and partisanship in the US Senate},
+  author={Lee, Frances E},
+  year={2009},
+  publisher={University of Chicago Press}
+}
