--- a/gk.bib
+++ b/gk.bib
@@ -18551,11 +18551,11 @@ address = {Chicago, IL}
   address =	 {NY}
 }
 
-@article{Mayhew74,
-  title =	 {{The electoral connection}},
-  author =	 {Mayhew, D.},
-  journal =	 {New Haven: Yale University},
-  year =	 {1974}
+@book{Mayhew74,
+  title={Congress: The electoral connection},
+  author={Mayhew, David R},
+  year={1974},
+  publisher={Yale university press}
 }
 
 @Book{Fiorina89,
