--- a/gk.bib
+++ b/gk.bib
@@ -29028,6 +29028,7 @@ Theory Group (Formerly: E1071), TU Wien},
   pages =        {50},
   year =         {1990}
 }
+
 @article{Shepsle2003,
   title =        {Losers in politics (and how they sometimes become
                   winners): William Riker's heresthetic},
@@ -29534,4 +29535,31 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   author={Lee, Frances E},
   year={2009},
   publisher={University of Chicago Press}
+}
+@article{Keller1992,
+  title={Properties of utility theories and related empirical phenomena},
+  author={Keller, L Robin},
+  journal={Utility theories: Measurements and applications},
+  pages={3--23},
+  year={1992},
+  publisher={Springer}
+}
+@article{jenke2021using,
+  title={Using Eye-Tracking to Understand Decision-Making in Conjoint Experiments},
+  author={Jenke, Libby and Bansak, Kirk and Hainmueller, Jens and Hangartner, Dominik},
+  journal={Political Analysis},
+  volume={29},
+  number={1},
+  pages={75--101},
+  year={2021}
+}
+@article{lo2021maximize,
+  title={To maximize or randomize? An experimental study of probability matching in financial decision making},
+  author={Lo, Andrew W and Marlowe, Katherine P and Zhang, Ruixun},
+  journal={Plos one},
+  volume={16},
+  number={8},
+  pages={e0252540},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
