--- a/gkpubs.bib
+++ b/gkpubs.bib
@@ -2821,3 +2821,9 @@ pages={1037--1060},
   doi =          {10.7910/DVN/ASUFTY},
   url =          {https://doi.org/10.7910/DVN/ASUFTY}
 }
+@article{ClaHorKau2023,
+  title={Correcting Measurement Error Bias in Conjoint Survey Experiments},
+  author={Clayton, Katherine and Horiuchi, Yusaku and Kaufman, Aaron R and King, Gary and Komisarchik, Mayya},
+  url={GaryKing.org/conjointE},
+  year={2023}
+}
