--- a/gk.bib
+++ b/gk.bib
@@ -29563,3 +29563,22 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2021},
   publisher={Public Library of Science San Francisco, CA USA}
 }
+@article{berinsky2017measuring,
+  title={Measuring public opinion with surveys},
+  author={Berinsky, Adam J},
+  journal={Annual review of political science},
+  volume={20},
+  pages={309--329},
+  year={2017},
+  publisher={Annual Reviews}
+}
+@article{schwarz2007cognitive,
+  title={Cognitive aspects of survey methodology},
+  author={Schwarz, Norbert},
+  journal={Applied Cognitive Psychology: The Official Journal of the Society for Applied Research in Memory and Cognition},
+  volume={21},
+  number={2},
+  pages={277--287},
+  year={2007},
+  publisher={Wiley Online Library}
+}
