--- a/gk.bib
+++ b/gk.bib
@@ -29582,3 +29582,13 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2007},
   publisher={Wiley Online Library}
 }
+@article{converse2006nature,
+  title={The nature of belief systems in mass publics (1964)},
+  author={Converse, Philip E},
+  journal={Critical review},
+  volume={18},
+  number={1-3},
+  pages={1--74},
+  year={2006},
+  publisher={Taylor \& Francis}
+}
