--- a/gk.bib
+++ b/gk.bib
@@ -29592,3 +29592,39 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2006},
   publisher={Taylor \& Francis}
 }
+@article{schwarz2007attitude,
+  title={Attitude construction: Evaluation in context},
+  author={Schwarz, Norbert},
+  journal={Social cognition},
+  volume={25},
+  number={5},
+  pages={638--656},
+  year={2007},
+  publisher={Guilford Press}
+}
+@book{mercier2020not,
+  title={Not born yesterday: The science of who we trust and what we believe},
+  author={Mercier, Hugo},
+  year={2020},
+  publisher={Princeton University Press}
+}
+  title={Epistemic vigilance},
+@article{sperber2010epistemic,
+  author={Sperber, Dan and Cl{\'e}ment, Fabrice and Heintz, Christophe and Mascaro, Olivier and Mercier, Hugo and Origgi, Gloria and Wilson, Deirdre},
+  journal={Mind \& language},
+  volume={25},
+  number={4},
+  pages={359--393},
+  year={2010},
+  publisher={Wiley Online Library}
+}
+@article{mandelbaum2019troubles,
+  title={Troubles with Bayesianism: An introduction to the psychological immune system},
+  author={Mandelbaum, Eric},
+  journal={Mind \& Language},
+  volume={34},
+  number={2},
+  pages={141--157},
+  year={2019},
+  publisher={Wiley Online Library}
+}
