--- a/gk.bib
+++ b/gk.bib
@@ -29628,3 +29628,9 @@ url = {https://EconPapers.repec.org/RePEc:cup:cbooks:9780521790321}
   year={2019},
   publisher={Wiley Online Library}
 }
+@book{Strzalecki2022,
+  author         = {Tomasz Strzalecki},
+url = {scholar.harvard.edu/tomasz/books}
+  title          = {Stochastic Choice Theory},
+  year           = {2022}
+}
