--- a/gk.bib
+++ b/gk.bib
@@ -29598,3 +29598,11 @@
   title  = {Stochastic Choice Theory},
   year   = {2022}
 }
+@article{zaller1992simple,
+  title={A simple theory of the survey response: Answering questions versus revealing preferences},
+  author={Zaller, John and Feldman, Stanley},
+  journal={American journal of political science},
+  pages={579--616},
+  year={1992},
+  publisher={JSTOR}
+}
